tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-acquire-directive.wyst
module removed_acquire_directive

fn load(addr: @atomic<u64>) -> u64 {
  return #acquire addr.load(.relaxed)
}
